--- a/students/examscheduleform.ui
+++ b/students/examscheduleform.ui
@@ -11,12 +11,115 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Form</string>
+   <string>برنامه امتحان پایان ترم دانشجو</string>
   </property>
   <property name="layoutDirection">
    <enum>Qt::RightToLeft</enum>
   </property>
+  <layout class="QGridLayout" name="gridLayout">
+   <item row="0" column="0">
+    <layout class="QVBoxLayout" name="VL_Form">
+     <item>
+      <layout class="QHBoxLayout" name="HL_TermNo">
+       <item>
+        <widget class="QLabel" name="L_TermNo">
+         <property name="text">
+          <string>ترم :</string>
+         </property>
+         <property name="buddy">
+          <cstring>LE_TermNo</cstring>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QLineEdit" name="LE_TermNo">
+         <property name="sizePolicy">
+          <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+           <horstretch>0</horstretch>
+           <verstretch>0</verstretch>
+          </sizepolicy>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QPushButton" name="PB_ShowResult">
+         <property name="text">
+          <string>مشاهده</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <spacer name="HS_TermNo">
+         <property name="orientation">
+          <enum>Qt::Horizontal</enum>
+         </property>
+         <property name="sizeHint" stdset="0">
+          <size>
+           <width>40</width>
+           <height>20</height>
+          </size>
+         </property>
+        </spacer>
+       </item>
+      </layout>
+     </item>
+     <item>
+      <widget class="QTableWidget" name="TBW_Courses">
+       <property name="editTriggers">
+        <set>QAbstractItemView::NoEditTriggers</set>
+       </property>
+       <property name="selectionMode">
+        <enum>QAbstractItemView::NoSelection</enum>
+       </property>
+       <property name="selectionBehavior">
+        <enum>QAbstractItemView::SelectRows</enum>
+       </property>
+       <column>
+        <property name="text">
+         <string>شماره درس</string>
+        </property>
+       </column>
+       <column>
+        <property name="text">
+         <string>نام درس</string>
+        </property>
+       </column>
+       <column>
+        <property name="text">
+         <string>نام استاد</string>
+        </property>
+       </column>
+       <column>
+        <property name="text">
+         <string>تاریخ امتحان</string>
+        </property>
+       </column>
+       <column>
+        <property name="text">
+         <string>زمان امتحان</string>
+        </property>
+       </column>
+       <column>
+        <property name="text">
+         <string>محل امتحان</string>
+        </property>
+       </column>
+       <column>
+        <property name="text">
+         <string>امضاء مراقب</string>
+        </property>
+       </column>
+      </widget>
+     </item>
+    </layout>
+   </item>
+  </layout>
  </widget>
+ <tabstops>
+  <tabstop>LE_TermNo</tabstop>
+  <tabstop>PB_ShowResult</tabstop>
+  <tabstop>TBW_Courses</tabstop>
+ </tabstops>
  <resources/>
  <connections/>
 </ui>
