--- a/students/studentwindow.ui
+++ b/students/studentwindow.ui
@@ -22,7 +22,7 @@
      <item>
       <layout class="QHBoxLayout" name="HL_Top">
        <item>
-        <widget class="QLabel" name="L_1">
+        <widget class="QLabel" name="L_P_User">
          <property name="sizePolicy">
           <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
            <horstretch>0</horstretch>
@@ -100,7 +100,7 @@
          <item row="0" column="0">
           <widget class="QTabWidget" name="TW_UserMenu">
            <property name="currentIndex">
-            <number>0</number>
+            <number>1</number>
            </property>
            <widget class="QWidget" name="tab_Menu_Education">
             <attribute name="title">
